--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Mission</a></li>
-							<li><a href="Community.html">Community</a></li>
+							<li><a href="community.html">Community</a></li>
 							<li><a href="team.html">Team</a></li>
 							<li><a href="ipstack.html">IPStack</a></li>
 						</ul>
