community.html error

--- a/community.html
+++ b/community.html
@@ -78,7 +78,7 @@
 							<li><a href="index.html">Mission</a></li>
 							<li class="active"><a href="work.html">Community</a></li>
 							<li><a href="team.html">team</a></li>
-							<li><a href="contact.html">IPStack</a></li>
+							<li><a href="ipstack.html">IPStack</a></li>
 						</ul>
 					</div>
 				</div>
