--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1> Technology Transfer challenge</h1>
-				   					<h2>Traditional channels for capital funding, talent acquisition and technology transfer are limited by geographical boundaries and human resource management inefficiencies.  </h2>
+				   					<h2>Traditional channels for capital funding, talent acquisition and technology transfer are limited by geographical and orgnization boundaries and human resource management inefficiencies.  </h2>
 										
 				   				</div>
 				   			</div>
@@ -110,9 +110,8 @@
 			   			<div class="row">
 				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
 				   				<div class="slider-text-inner">
-				   					<h1>What is 1A1</h1>
-										<h2>1AI is a decentralized startup platform using artificial intelligence (AI) and smart contracts to allow individuals to participate in launching, investing and contributing in exciting startup ventures, which are backed by Intellectual Property (IP), such as patents, trademarks and copyrights.  
-										1AI believes that every person in the world should have the opportunity to participate in new IP-backed startup ventures, as an investor, an entrepreneur, an IP holder or a talent provider. </h2>
+				   					<h1>1AI Vision</h1>
+										<img src="images/1AI.jpg" class="img-responsive" alt="" > 
 				   				</div>
 				   			</div>
 				   		</div>
@@ -125,7 +124,7 @@
 				   			<div class="col-md-6 col-md-offset-3 col-md-push-3 slider-text">
 				   				<div class="slider-text-inner">
 				   					<h1>1A Goal</h1>
-										<h2>1AI intends to create a complete entrepreneur ecosystem based on blockchain and AI technologies in which smart contracts between the participants are maintained decentrally and connections between investors, entrepreneurs, IP holders or talent providers are facilitated using patent pending AI match engine to provide trackable engagements between the participants to ensure that their participation rights are decentralized, transparent, immutable, highly available, highly secure, simple, fast and cost effective.   </h2>
+										<h2>Smart contracts powered by AI for easy technology transfer entrusted by all parties!</h2>
 				   				</div>
 				   			</div>
 				   		</div>
@@ -138,32 +137,31 @@
 		<div id="fh5co-work" class="fh5co-light-grey">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Work</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>1AI Mission Statement</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a href="work-single.html" class="work"  style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>What is 1AI?</h3>
+							<span>1AI is a decentralized startup platform using artificial intelligence (AI) and smart contracts to allow individuals to participate in launching, investing and contributing in exciting startup ventures, which are backed by Intellectual Property (IP), such as patents, trademarks and copyrights.  </span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Brading</span>
+							<h3>Who will benefit from 1AI?</h3>
+							<span>1AI believes that every person in the world should have the opportunity to participate in new IP-backed startup ventures, as an investor, an entrepreneur, an IP holder or a talent provider.  </span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>How will 1AI get there?</h3>
+							<span>1AI intends to create a complete entrepreneur ecosystem based on blockchain and AI technologies in which smart contracts between the participants are maintained decentrally and connections between investors, entrepreneurs, IP holders or talent providers are facilitated using patent pending AI match engine to provide trackable engagements between the participants to ensure that their participation rights are decentralized, transparent, immutable, highly available, highly secure, simple, fast and cost effective.  </span>
 						</div>
 					</a>
 				</div>
