Fix the broken links.

--- a/community.html
+++ b/community.html
@@ -107,7 +107,7 @@
 		<div id="fh5co-work">
 			<div class="row">
 				<div class="col-md-6 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-1.jpg);">
+					<a href="community.html" class="work" style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
 							<h3>Entrepreneurs</h3>
 							<span>Entrepreneurs can use 1AI network to pitch projects to investors from different parts of the world in the community of 1AI network and locate talents from every corner of the world.  Using 1AI’s patent pending AI match engine, entrepreneurs are no longer limited by geographical boundaries and human resource efficiencies.</span>
@@ -115,7 +115,7 @@
 					</a>
 				</div>
 				<div class="col-md-6 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="community.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Talents</h3>
 							<span>Talents from around the world can use 1AI network to participate in IP-backed projects in need of their expertise/talents.  Talents who have their own careers can contribute to IP-backed projects in their spare time and enjoy the bounties of gig economy.  </span>
@@ -123,7 +123,7 @@
 					</a>
 				</div>
 				<div class="col-md-6 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="community.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>Investors</h3>
 							<span>Investors worldwide can use 1AI network to invest in IP-backed projects.  Investors can receive pitches from numerous startup founders with wide range of IP-backed technology and/or business ideas from around the world to invest and participate in their success.</span>
@@ -131,7 +131,7 @@
 					</a>
 				</div>
 				<div class="col-md-6 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-4.jpg);">
+					<a href="community.html" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>IP Holders</h3>
 							<span>IP holders, such as universities or research institutions, can use 1AI network to broadcast their patented or patent pending technologies to entrepreneurs throughout the world in the 1AI community, improving the possibility of successful commercialization of their technologies while allowing entrepreneurs to develop, investors to invest in, and talents from around the world to contribute to projects backed by cutting edge research and innovation from world-class researchers.  </span>
