--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work"  style="background-image: url(images/portfolio-1.jpg);">
+					<a href="index.html" class="work"  style="background-image: url(images/portfolio-1.jpg);">
 						<div class="desc">
 							<h3>What is 1AI?</h3>
 							<span>1AI is a decentralized startup platform using artificial intelligence (AI) and smart contracts to allow individuals to participate in launching, investing and contributing in exciting startup ventures, which are backed by Intellectual Property (IP), such as patents, trademarks and copyrights.  </span>
@@ -150,7 +150,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
+					<a href="index.html" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Who will benefit from 1AI?</h3>
 							<span>1AI believes that every person in the world should have the opportunity to participate in new IP-backed startup ventures, as an investor, an entrepreneur, an IP holder or a talent provider.  </span>
@@ -158,7 +158,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a href="work-single.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="index.html" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
 							<h3>How will 1AI get there?</h3>
 							<span>1AI intends to create a complete entrepreneur ecosystem based on blockchain and AI technologies in which smart contracts between the participants are maintained decentrally and connections between investors, entrepreneurs, IP holders or talent providers are facilitated using patent pending AI match engine to provide trackable engagements between the participants to ensure that their participation rights are decentralized, transparent, immutable, highly available, highly secure, simple, fast and cost effective.  </span>
